--- a/ProjectExpenseControl/Views/Areas/Index.cshtml
+++ b/ProjectExpenseControl/Views/Areas/Index.cshtml
@@ -9,52 +9,10 @@
 <p>
     @Html.ActionLink("Crear Área", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ARE_DES_NAME)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ARE_DES_NAME)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.ARE_IDE_AREA }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.ARE_IDE_AREA }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.ARE_IDE_AREA })
-            </td>
-        </tr>
-    }
+@Html.Partial("_LayoutBottonsExportData")
 
-</table>
-@*<div id="grid"></div>
-<div style='margin-top: 20px;'>
-    <div style='float: left;'>
-        <input type="button" value="Export to Excel" id='excelExport' />
-        <br /><br />
-        <input type="button" value="Export to XML" id='xmlExport' />
-    </div>
-    <div style='margin-left: 10px; float: left;'>
-        <input type="button" value="Export to CSV" id='csvExport' />
-        <br /><br />
-        <input type="button" value="Export to TSV" id='tsvExport' />
-    </div>
-    <div style='margin-left: 10px; float: left;'>
-        <input type="button" value="Export to HTML" id='htmlExport' />
-        <br /><br />
-        <input type="button" value="Export to JSON" id='jsonExport' />
-    </div>
-    <div style='margin-left: 10px; float: left;'>
-        <input type="button" value="Export to PDF" id='pdfExport' />
-    </div>
-</div>*@
-
-<div id='tabs'>
+@*<div id='tabs'>
     <ul>
         <li style="margin-left: 30px;">
             Grid 1
@@ -70,8 +28,8 @@
     <div style="overflow: hidden;">
         <div style="border:none;" id="grid2"></div>
     </div>
-</div>
-@*@section scripts
+</div>*@
+@section scripts
 {
     <script>
         $(document).ready(function () {
@@ -86,29 +44,58 @@
                     id: 'ARE_IDE_AREA',
                     url: '/Areas/GetAreas'
                 };
+
+            var editar = function (id, row, column, value) {
+                var _id = $('#grid').jqxGrid('getcellvalue', id, "ARE_IDE_AREA");
+                //var _pname = $('#grid').jqxGrid('getcellvalue', id, "ARE_DES_NAME");
+                var format = { target: '"_new"' };
+                var href = "<a href=/Areas/Edit/" + _id + "><img style='margin-left: 5px; ' src='../../Images/editar.png'/>";
+                var html = $.jqx.dataFormat.formatlink(href, format);
+                return html;
+            }
+
+            var detalle = function (id, row, column, value) {
+                var _id = $('#grid').jqxGrid('getcellvalue', id, "ARE_IDE_AREA");
+                //var _pname = $('#grid').jqxGrid('getcellvalue', id, "ARE_DES_NAME");
+                var format = { target: '"_new"' };
+                var href = "<a href=/Areas/Details/" + _id + "><img style='margin-left: 5px; ' src='../../Images/detalles.png'/>";
+                var html = $.jqx.dataFormat.formatlink(href, format);
+                return html;
+            }
+
+            var borrar = function (id, row, column, value) {
+                var _id = $('#grid').jqxGrid('getcellvalue', id, "ARE_IDE_AREA");
+                //var _pname = $('#grid').jqxGrid('getcellvalue', id, "ARE_DES_NAME");
+                var format = { target: '"_new"' };
+                var href = "<a href=/Areas/Delete/" + _id + "><img style='margin-left: 5px; ' src='../../Images/eliminar.png'/>";
+                var html = $.jqx.dataFormat.formatlink(href, format);
+                return html;
+            }
+
             var dataAdapter = new $.jqx.dataAdapter(source);
             // create Tree Grid
             $("#grid").jqxGrid(
                 {
-                    width: 850,
+                    width: 940,
                     source: dataAdapter,
-                    theme: 'arctic',
-                    pageSize: 5,
+                    theme: 'darkblue',
+                    pageSize: 10,
                     sortable: true,
-                    filtermode: 'excel',
                     filterable: true,
                     pageable: true,
                     columnsresize: true,
                     autoshowfiltericon: false,
                     columns: [
-                        { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width: 200 },
+                        { text: '', cellsrenderer: editar, width: 20, align: 'center' },
+                        { text: '', cellsrenderer: detalle, width: 20, align: 'center' },
+                        { text: '', cellsrenderer: borrar, width: 20, align: 'center' },
+                        { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width:130 },
                         { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
                     ]
                 });
             $("#excelExport").jqxButton();
             $("#xmlExport").jqxButton();
             $("#csvExport").jqxButton();
-            $("#tsvExport").jqxButton();
             $("#htmlExport").jqxButton();
             $("#jsonExport").jqxButton();
             $("#pdfExport").jqxButton();
@@ -121,9 +108,7 @@
             $("#csvExport").click(function () {
                 $("#grid").jqxGrid('exportdata', 'csv', 'jqxGrid');
             });
-            $("#tsvExport").click(function () {
-                $("#grid").jqxGrid('exportdata', 'tsv', 'jqxGrid');
-            });
+            
             $("#htmlExport").click(function () {
                 $("#grid").jqxGrid('exportdata', 'html', 'jqxGrid');
             });
@@ -135,9 +120,9 @@
             });
         });
     </script>
-}*@
+}
 
-@section scripts
+@*@section scripts
 {
     <script>
         $(document).ready(function () {
@@ -203,5 +188,5 @@
             $('#tabs').jqxTabs({ width: 500, height: 560, initTabContent: initWidgets });
         });
     </script>
-}
+}*@
 
