--- a/ProjectExpenseControl/Views/Requests/Index.cshtml
+++ b/ProjectExpenseControl/Views/Requests/Index.cshtml
@@ -14,9 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.REQ_IDE_USER)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.REQ_IDE_AREA)
-        </th>
+        @*<th>
+            @Html.DisplayNameFor(model => model..REQ_IDE_AREA)
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.REQ_DES_TYPE_GASTO)
         </th>
@@ -43,9 +43,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.REQ_IDE_USER)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.REQ_IDE_AREA)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.REQ_DES_TYPE_GASTO)
         </td>
@@ -65,9 +65,10 @@
             @Html.DisplayFor(modelItem => item.REQ_FH_CREATED)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.REQ_IDE_REQUEST }) |
-            @Html.ActionLink("Details", "Details", new { id=item.REQ_IDE_REQUEST }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.REQ_IDE_REQUEST })
+            @Html.ActionLink("Edit", "Edit", new { id = item.REQ_IDE_REQUEST }) |
+            @Html.ActionLink("Details", "Details", new { id = item.REQ_IDE_REQUEST }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.REQ_IDE_REQUEST }) |
+            @Html.ActionLink("Comprobar", "Prove", new { id = item.REQ_IDE_REQUEST }) |
         </td>
     </tr>
 }
