En la vista de solicitudes ya se puede filtrar por usuario y tipo de usuario con el store GetRequests aun falta validar en la vista ya que puede variar. Detalles en la vista y en el nav

--- a/ProjectExpenseControl/Views/Budgets/Index.cshtml
+++ b/ProjectExpenseControl/Views/Budgets/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Crear Solicitud", "Create")
+    @Html.ActionLink("Crear Presupuesto", "Create")
 </p>
 <table class="table">
     <tr>
