ya están las vistas de las solicitudes y ya deberia funcionar la parte en que rechaza o acepta dependiendo quien lo hace

--- a/ProjectExpenseControl/Views/Requests/Index.cshtml
+++ b/ProjectExpenseControl/Views/Requests/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<ProjectExpenseControl.Models.Request>
 
 @{
-    ViewBag.Title = "Index";
+    ProjectExpenseControl.Models.CustomSerializeModel user = (ProjectExpenseControl.Models.CustomSerializeModel)Session["user"];
+    ViewBag.Title = "Todas las solicitudes";
 }
 
-<h2>Index</h2>
+<h2>Todas las solicitudes</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -39,7 +40,19 @@
 {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.REQ_IDE_USER)
+            @if(user.UserId == item.REQ_IDE_USER)
+            {
+                @:Yo
+            }
+            else
+            {
+                ProjectExpenseControl.Services.UserRepository u = new ProjectExpenseControl.Services.UserRepository();
+                ProjectExpenseControl.DataAccess.User User = u.GetOne(item.REQ_IDE_USER);
+                @: @(User.USR_DES_NAME + " " + User.USR_DES_FIRST_NAME)
+
+            }
+
+            @*@Html.DisplayFor(modelItem => item.REQ_IDE_USER)*@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.REQ_DES_TYPE_GASTO)
@@ -94,37 +107,96 @@
             @Html.DisplayFor(modelItem => item.REQ_FH_CREATED)
         </td>
         <td>
-            @Html.ActionLink("Details", "Details", new { id = item.REQ_IDE_REQUEST }) |
             @{ 
                 switch (item.REQ_IDE_STATUS_APROV)
                 {
                     case 5:
-                        @:Solicitud por Aprobar |
+                        if (user.RoleName[0] == "JefeArea")
+                        {
+                            @Html.ActionLink("Aprobar", "Approve", new { id = item.REQ_IDE_REQUEST, type = 1 }, new { @class = "text-success" }) @:|
+                            @Html.ActionLink("Detalles", "Details", new { id = item.REQ_IDE_REQUEST }) @:|
+                            @Html.ActionLink("Rechazar", "Reject", new { id = item.REQ_IDE_REQUEST, type = 1 }, new { @class = "text-danger" }) @:|
+                        }
+                        else if (user.RoleName[0] == "Usuario" || user.RoleName[0] == "Administrador")
+                        {
+                            @:Solicitud por Aprobar |
+                        }
                         break;
                     case 6:
-                        @:Solicitud Rechazada |
+                        if (user.RoleName[0] == "Usuario" || user.RoleName[0] == "Administrador")
+                        {
+                            @:Solicitud Rechazada |
+                            @Html.ActionLink("Editar Solicitud", "Edit", new { id = item.REQ_IDE_REQUEST }) @:|
+                        }
                         break;
                     case 7:
-                        @:Solicitud Aprobada |
+                        if (user.RoleName[0] == "Usuario")
+                        {
+                            @Html.ActionLink("Comprobar", "Prove", new { id = item.REQ_IDE_REQUEST }) @:|
+
+                        }
+                        else if (user.RoleName[0] == "Administrador")
+                        {
+                            
+                            @:Solicitud Aprobada |
+                        }
                         break;
                     case 8:
-                        @Html.ActionLink("Edit", "Edit", new { id = item.REQ_IDE_REQUEST }) @:|
-                        @Html.ActionLink("Comprobar", "Prove", new { id = item.REQ_IDE_REQUEST })
+                        if (user.RoleName[0] == "Usuario" || user.RoleName[0] == "Administrador")
+                        {
+                            @:Solicitud por Comprobar |
+
+                        }
+                        else if (user.RoleName[0] == "JefeArea")
+                        {
+                            @Html.ActionLink("Aprobar", "Approve", new { id = item.REQ_IDE_REQUEST, type = 2 }, new { @class = "text-success" }) @:|
+                            @Html.ActionLink("Detalles", "Details", new { id = item.REQ_IDE_REQUEST }) @:|
+                            @Html.ActionLink("Rechazar", "Reject", new { id = item.REQ_IDE_REQUEST, type = 2 }, new { @class = "text-danger" }) @:|
+                        }
                         break;
                     case 9:
-                        @:Solicitud Comprobada |
+                        if (user.RoleName[0] == "Usuario" || user.RoleName[0] == "Administrador")
+                        {
+                            @:Solicitud por Aprobar CXP |
+                            @* Comprobada *@
+                        }
+
                         break;
                     case 10:
-                        @:Solicitud Comprobada Rechazada |
+                        if (user.RoleName[0] == "Usuario" || user.RoleName[0] == "Administrador")
+                        {
+                            @:Solicitud Comprobada Rechazada |
+                            @Html.ActionLink("Modificar XML", "Prove", new { id = item.REQ_IDE_REQUEST }) @:|
+                        }
+
                         break;
                     case 11:
-                        @:Solicitud por Aprobar CXP |
+                        if (user.RoleName[0] == "Administrador" || user.RoleName[0] == "Usuario")
+                        {
+                            @:Solicitud por Aprobar CXP |
+
+                        }
+                        else if ( user.RoleName[0] == "CuentasXPagar")
+                        {
+                            @Html.ActionLink("Aprobar", "ApproveCXP", new { id = item.REQ_IDE_REQUEST }, new { @class = "text-success" }) @:|
+                            @Html.ActionLink("Detalles", "Details", new { id = item.REQ_IDE_REQUEST }) @:|
+                            @Html.ActionLink("Rechazar", "RejectCXP", new { id = item.REQ_IDE_REQUEST }, new { @class = "text-danger" }) @:|
+                        }
+                        
                         break;
                     case 12:
-                        @:Solicitud Rechazada CXP |
+                        if (user.RoleName[0] == "Administrador" || user.RoleName[0] == "Usuario")
+                        {
+                            @:Solicitud Rechazada CXP |
+
+                        }
+                        
                         break;
                     case 13:
-                        @:Solicitud Aprobada CXP |
+                        if (user.RoleName[0] == "Administrador" || user.RoleName[0] == "Usuario")
+                        {
+                            @:Solicitud Aprobada CXP |
+                        }
                         break;
 
                 }
@@ -132,6 +204,7 @@
             
             
             @*@Html.ActionLink("Delete", "Delete", new { id = item.REQ_IDE_REQUEST }) |*@
+            @*@Html.ActionLink("Detalles", "Details", new { id = item.REQ_IDE_REQUEST }) |*@
             
         </td>
     </tr>
